deploy/k8s/components/sso/backend-secret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alerta-next-backend
spec:
  template:
    spec:
      containers:
        - name: backend
